--- a/testAPI.csproj
+++ b/testAPI.csproj
@@ -1,12 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="MongoDB.Driver" Version="2.11.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.11.0"/>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.7"/>
   </ItemGroup>
-
-
 </Project>
