--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 version: '3'
 services:
   web:
-    build: .
+    image: testapi-image:latest
+    network_mode: "host"
     ports:
       - "5000:5000"
+        
