--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   web:
-    image: testapi-image:latest
+    image: "testapi-image:latest"
     network_mode: "host"
     ports:
       - "5000:5000"
